@@ -14,12 +14,10 @@ import io.confluent.kafka.schemaregistry.rest.SchemaRegistryConfig;
 import io.confluent.kafka.schemaregistry.storage.KafkaSchemaRegistry;
 import io.confluent.kafka.schemaregistry.storage.serialization.SchemaRegistrySerializer;
 import io.kcache.KeyValue;
-import java.util.Base64;
-import java.util.List;
-import java.util.Optional;
-import java.util.Properties;
+
+import java.util.*;
 import org.junit.Before;
-import org.junit.jupiter.api.Test;
+import org.junit.Test;
 
 import static org.junit.Assert.*;
 
@@ -33,7 +31,6 @@ public class DekRegistryTest extends ClusterTestHarness {
 
     private KeyEncryptionKey kek;
 
-    @Override
     @Before
     public void setUp() throws Exception {
         super.setUp();
@@ -76,12 +73,12 @@ public class DekRegistryTest extends ClusterTestHarness {
         KeyEncryptionKey kek2 = dekRegistry.createKek(kRequest2);
         // Test get without a subject prefix.
         // Includes deleted ones.
-        assertEquals(List.of("kekName1", "kekName2"), dekRegistry.getKekNames(null, true));
+        assertEquals(Arrays.asList("kekName1", "kekName2"), dekRegistry.getKekNames(null, true));
         // Ignores deleted ones.
-        assertEquals(List.of("kekName1"), dekRegistry.getKekNames(List.of(), false));
+        assertEquals(Collections.singletonList("kekName1"), dekRegistry.getKekNames(Collections.emptyList(), false));
 
         // Test get with a non-existing subject prefix.
-        assertEquals(List.of(), dekRegistry.getKekNames(List.of("non_exist_prefix"), false));
+        assertEquals(Collections.emptyList(), dekRegistry.getKekNames(Collections.singletonList("non_exist_prefix"), false));
 
         // Test get by subject prefix with Dek.
         TestKmsDriver t = new TestKmsDriver();
@@ -92,9 +89,9 @@ public class DekRegistryTest extends ClusterTestHarness {
         CreateDekRequest dekRequest = CreateDekRequest.fromJson(String.format("{\"subject\": \"subject2\", \"version\": \"2\", \"algorithm\": \"AES256_GCM\", \"encryptedKeyMaterial\": \"%s\", \"deleted\": false}", encryptedKeyMaterial)
         );
         dekRegistry.createDek(kek2.getName(), dekRequest);
-        assertEquals(List.of("kekName1", "kekName2"), dekRegistry.getKekNames(List.of("sub"), true));
-        assertEquals(List.of("kekName1"), dekRegistry.getKekNames(List.of("subject1"), true));
-        assertEquals(List.of(), dekRegistry.getKekNames(List.of("subject1"), false));
+        assertEquals(Arrays.asList("kekName1", "kekName2"), dekRegistry.getKekNames(Collections.singletonList("sub"), true));
+        assertEquals(Collections.singletonList("kekName1"), dekRegistry.getKekNames(Collections.singletonList("subject1"), true));
+        assertEquals(Collections.emptyList(), dekRegistry.getKekNames(Collections.singletonList("subject1"), false));
     }
 
     @Test
